--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,4 @@
+removed_sources:
+  Test-Simple-0.98.tar.gz: 792fc70083905bab7fa443dc379ffb1f0998f068
 sources:
-  "Test-Simple-0.98.tar.gz": 792fc70083905bab7fa443dc379ffb1f0998f068
+  Test-Simple-1.001002.tar.gz: 179723fbb311d4785ede817ba7ecec43fb19d6d7
