--- a/.abf.yml
+++ b/.abf.yml
@@ -2,5 +2,6 @@ removed_sources:
   Test-Simple-0.98.tar.gz: 792fc70083905bab7fa443dc379ffb1f0998f068
   Test-Simple-1.001002.tar.gz: 179723fbb311d4785ede817ba7ecec43fb19d6d7
   Test-Simple-1.001003.tar.gz: 39cf357d85ca2953956dc7712f395f370cd1b413
-sources:
   Test-Simple-1.001006.tar.gz: 3b79465243033b197a85afff51e4f1e37ac44e29
+sources:
+  Test-Simple-1.001008.tar.gz: 8fccec5f88811ea3385860316b89ac102c75fd0a
