--- a/.abf.yml
+++ b/.abf.yml
@@ -3,5 +3,6 @@ removed_sources:
   Test-Simple-1.001002.tar.gz: 179723fbb311d4785ede817ba7ecec43fb19d6d7
   Test-Simple-1.001003.tar.gz: 39cf357d85ca2953956dc7712f395f370cd1b413
   Test-Simple-1.001006.tar.gz: 3b79465243033b197a85afff51e4f1e37ac44e29
-sources:
   Test-Simple-1.001008.tar.gz: 8fccec5f88811ea3385860316b89ac102c75fd0a
+sources:
+  Test-Simple-1.001009.tar.gz: d68082c7b80bf4267c08aebb714bcebf35dd2660
